--- a/app/src/main/res/drawable-xxhdpi/comment_expander_background.xml
+++ b/app/src/main/res/drawable-xxhdpi/comment_expander_background.xml
@@ -4,6 +4,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#30000000" />
+        android:color="@color/primary_light" />
 
 </shape>
