--- a/app/src/main/res/drawable/self_text_background.xml
+++ b/app/src/main/res/drawable/self_text_background.xml
@@ -3,6 +3,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#30000000" />
+        android:color="@color/primary_light" />
 
 </shape>
