--- a/app/src/main/res/drawable/thumbnail_background.xml
+++ b/app/src/main/res/drawable/thumbnail_background.xml
@@ -3,12 +3,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#000000" />
-
-    <padding
-        android:left="1dp"
-        android:top="1dp"
-        android:right="1dp"
-        android:bottom="1dp" />
+        android:color="@color/primary_light" />
 
 </shape>
