--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- http://www.materialpalette.com/blue-grey/red -->
+    <color name="primary">#607D8B</color>
+    <color name="primary_dark">#455A64</color>
+    <color name="primary_light">#CFD8DC</color>
+    <color name="accent">#FF5252</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#727272</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#B6B6B6</color>
+
     <color name="transparent">#00000000</color>
-    <color name="link_title">#4040FF</color>
-    <color name="list_item_selected">#CCEDFF</color>
-    <color name="black">#000000</color>
+    <color name="indentation">@color/primary_light</color>
 
 </resources>
