--- a/app/src/main/res/layout/app_toolbar.xml
+++ b/app/src/main/res/layout/app_toolbar.xml
@@ -3,8 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/primary"
     app:theme="@style/ToolbarThemeLightText"
-    app:popupTheme="@style/Theme.AppCompat.Light"/>
+    app:popupTheme="@style/Theme.AppCompat.Light"
+    style="@style/Toolbar"/>
