--- a/app/src/main/res/menu/link_context_menu.xml
+++ b/app/src/main/res/menu/link_context_menu.xml
@@ -19,7 +19,7 @@
 
     <item android:id="@+id/action_save"
         android:title="@string/action_save"
-        android:icon="@drawable/ic_action_save_filled"
+        android:icon="@drawable/ic_action_save"
         app:showAsAction="never"/>
 
     <item android:id="@+id/action_share"
