--- a/app/src/main/res/menu/links_menu.xml
+++ b/app/src/main/res/menu/links_menu.xml
@@ -6,19 +6,19 @@
         android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
         android:icon="@drawable/ic_action_refresh"
-        app:showAsAction="ifRoom|withText" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_change_sort"
         android:title="@string/action_change_sort"
         android:icon="@drawable/ic_change_sort"
-        app:showAsAction="ifRoom|withText" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_change_timespan"
         android:title="@string/action_change_timespan"
         android:icon="@drawable/ic_change_timespan"
-        app:showAsAction="ifRoom|withText" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_settings"
