--- a/app/src/main/res/drawable/thumbnail_background.xml
+++ b/app/src/main/res/drawable/thumbnail_background.xml
@@ -5,4 +5,10 @@
         android:width="1dp"
         android:color="@color/primary_light" />
 
+    <padding
+        android:top="1dp"
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp"/>
+
 </shape>
