--- a/app/src/main/res/layout/reddit_link_item.xml
+++ b/app/src/main/res/layout/reddit_link_item.xml
@@ -5,12 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="4dp"
-    android:paddingTop="4dp">
+    android:paddingTop="@dimen/link_list_item_margin_vertical"
+    android:paddingBottom="@dimen/link_list_item_margin_vertical"
+    android:paddingLeft="@dimen/link_list_item_margin_horizontal"
+    android:paddingRight="@dimen/link_list_item_margin_horizontal">
 
     <TextView
         android:id="@+id/link_score"
         style="@style/LinkScoreTextView"
+        android:layout_marginRight="@dimen/link_score_margin"
         android:gravity="center"
         android:text="@string/link_score_default"/>
 
@@ -22,7 +25,11 @@
         <TextView
             android:id="@+id/link_title"
             style="@style/LinkTitleTextView"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="@dimen/link_title_margin"
+            android:minLines="2"
+            android:maxLines="2"
+            android:ellipsize="end"/>
 
         <TextView
             android:id="@+id/link_author"
@@ -56,6 +63,7 @@
         android:id="@+id/link_thumbnail"
         style="@style/LinkThumbnail"
         android:layout_gravity="center_vertical"
+        android:layout_marginLeft="@dimen/link_thumbnail_margin"
         android:background="@drawable/thumbnail_background"
         android:src="@drawable/ic_thumbnail_placeholder"/>
 
