--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,65 +70,55 @@
     <style name="LinkScoreTextView">
         <item name="android:layout_width">42dp</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:layout_marginLeft">4dp</item>
-        <item name="android:layout_marginRight">4dp</item>
         <item name="android:textSize">@dimen/link_score_text_size</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="LinkTitleTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_weight">1</item>
         <item name="android:textSize">@dimen/link_title_text_size</item>
         <item name="android:textColor">@color/primary_text</item>
-        <item name="android:minLines">2</item>
-        <item name="android:maxLines">2</item>
-        <item name="android:ellipsize">end</item>
     </style>
 
     <style name="LinkAuthorTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginRight">5dp</item>
         <item name="android:textSize">@dimen/link_author_text_size</item>
-        <item name="android:textStyle">italic</item>
         <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="LinkSubredditTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginRight">5dp</item>
         <item name="android:textSize">@dimen/link_subreddit_text_size</item>
-        <item name="android:textStyle">italic</item>
         <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="LinkTimestampTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/link_timestamp_text_size</item>
-        <item name="android:textStyle">italic</item>
         <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="LinkDomainTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginRight">5dp</item>
         <item name="android:textSize">@dimen/link_domain_text_size</item>
-        <item name="android:textStyle">italic</item>
         <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="LinkThumbnail">
         <item name="android:layout_width">72dp</item>
         <item name="android:layout_height">72dp</item>
-        <item name="android:layout_marginLeft">4dp</item>
-        <item name="android:layout_marginRight">4dp</item>
     </style>
 
     <style name="ProgressDialog" parent="Theme.AppCompat.Dialog">
