--- a/app/src/main/res/layout/reddit_comment_item.xml
+++ b/app/src/main/res/layout/reddit_comment_item.xml
@@ -29,29 +29,38 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical">
 
-            <ImageView
-                android:id="@+id/comment_expander"
-                android:layout_width="@dimen/comment_expander_size"
-                android:layout_height="@dimen/comment_expander_size"
-                android:layout_marginRight="@dimen/comment_expander_margin"
-                android:layout_marginEnd="@dimen/comment_expander_margin"
-                android:src="@drawable/ic_thread_collapse"
-                android:background="@drawable/comment_expander_background"/>
-
-            <TextView
-                android:id="@+id/comment_author"
+            <LinearLayout
+                android:id="@+id/comment_expander_view"
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/comment_author_padding"
-                android:textColor="@color/secondary_text"
-                android:textStyle="bold"
-                android:textSize="@dimen/comment_author_text_size"/>
+                android:gravity="center_vertical">
+
+                <ImageView
+                    android:id="@+id/comment_expander_icon"
+                    android:layout_width="@dimen/comment_expander_size"
+                    android:layout_height="@dimen/comment_expander_size"
+                    android:layout_marginRight="@dimen/comment_expander_margin"
+                    android:layout_marginEnd="@dimen/comment_expander_margin"
+                    android:src="@drawable/ic_thread_collapse"
+                    android:background="@drawable/comment_expander_background"/>
+
+                <TextView
+                    android:id="@+id/comment_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/comment_author_margin"
+                    android:textColor="@color/secondary_text"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/comment_author_text_size"/>
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/comment_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/comment_score_padding"
+                android:layout_marginRight="@dimen/comment_score_margin"
                 android:textColor="@color/secondary_text"
                 android:textSize="@dimen/comment_score_text_size"/>
 
