Misc. style fixes

--- a/app/src/main/res/layout/reddit_comment_item.xml
+++ b/app/src/main/res/layout/reddit_comment_item.xml
@@ -27,7 +27,7 @@
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical">
+            android:gravity="bottom">
 
             <LinearLayout
                 android:id="@+id/comment_expander_view"
