--- a/app/src/main/res/layout/reddit_comment_item.xml
+++ b/app/src/main/res/layout/reddit_comment_item.xml
@@ -88,7 +88,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/comment_data"
             android:textSize="@dimen/comment_body_text_size"
-            android:textColor="@color/primary_text"/>
+            android:textColor="@color/primary_text"
+            android:bufferType="spannable"/>
 
     </RelativeLayout>
 
