Started getText() for RedditTextView

--- a/app/src/main/res/layout/comments_fragment_link_header.xml
+++ b/app/src/main/res/layout/comments_fragment_link_header.xml
@@ -61,6 +61,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/primary_text"
         android:padding="@dimen/link_self_text_padding"
-        android:background="@drawable/self_text_background" />
+        android:background="@drawable/self_text_background"
+        android:bufferType="spannable"/>
 
 </LinearLayout>
