--- a/app/src/main/res/layout/reddit_link_item.xml
+++ b/app/src/main/res/layout/reddit_link_item.xml
@@ -1,68 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/link_list_item_background"
-    android:layout_width="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingTop="@dimen/link_list_item_margin_vertical"
-    android:paddingBottom="@dimen/link_list_item_margin_vertical"
-    android:paddingLeft="@dimen/link_list_item_margin_horizontal"
-    android:paddingRight="@dimen/link_list_item_margin_horizontal">
+    android:layout_margin="5dp"
+    card_view:cardElevation="8dp"
+    card_view:cardCornerRadius="0dp">
 
-    <TextView
-        android:id="@+id/link_score"
-        style="@style/LinkScoreTextView"
-        android:layout_marginRight="@dimen/link_score_margin"
-        android:gravity="center"
-        android:text="@string/link_score_default"/>
-
-    <RelativeLayout
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/link_list_item_margin_vertical"
+        android:paddingBottom="@dimen/link_list_item_margin_vertical"
+        android:paddingLeft="@dimen/link_list_item_margin_horizontal"
+        android:paddingRight="@dimen/link_list_item_margin_horizontal">
 
         <TextView
-            android:id="@+id/link_title"
-            style="@style/LinkTitleTextView"
+            android:id="@+id/link_score"
+            style="@style/LinkScoreTextView"
+            android:layout_marginRight="@dimen/link_score_margin"
+            android:gravity="center"
+            android:text="@string/link_score_default"/>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/link_title"
+                style="@style/LinkTitleTextView"
+                android:layout_gravity="center_vertical"
+                android:layout_marginBottom="@dimen/link_title_margin"
+                android:minLines="2"/>
+
+            <TextView
+                android:id="@+id/link_author"
+                style="@style/LinkAuthorTextView"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/link_title"/>
+
+            <TextView
+                android:id="@+id/link_timestamp"
+                style="@style/LinkTimestampTextView"
+                android:layout_below="@id/link_author"/>
+
+            <TextView
+                android:id="@+id/link_domain"
+                style="@style/LinkDomainTextView"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/link_title"/>
+
+            <TextView
+                android:id="@+id/link_subreddit"
+                style="@style/LinkSubredditTextView"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/link_domain"/>
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/link_thumbnail"
+            style="@style/LinkThumbnail"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="@dimen/link_title_margin"
-            android:minLines="2"/>
+            android:layout_marginLeft="@dimen/link_thumbnail_margin"
+            android:background="@drawable/thumbnail_background"
+            android:src="@drawable/ic_thumbnail_placeholder"/>
 
-        <TextView
-            android:id="@+id/link_author"
-            style="@style/LinkAuthorTextView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@id/link_title"/>
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/link_timestamp"
-            style="@style/LinkTimestampTextView"
-            android:layout_below="@id/link_author"/>
-
-        <TextView
-            android:id="@+id/link_domain"
-            style="@style/LinkDomainTextView"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/link_title"/>
-
-        <TextView
-            android:id="@+id/link_subreddit"
-            style="@style/LinkSubredditTextView"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/link_domain"/>
-
-    </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/link_thumbnail"
-        style="@style/LinkThumbnail"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/link_thumbnail_margin"
-        android:background="@drawable/thumbnail_background"
-        android:src="@drawable/ic_thumbnail_placeholder"/>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
