--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,18 +68,15 @@
     </style>
 
     <style name="LinkScoreTextView">
-        <item name="android:layout_width">42dp</item>
-        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/link_score_text_size</item>
         <item name="android:textColor">@color/secondary_text</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:singleLine">true</item>
     </style>
 
     <style name="LinkTitleTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1</item>
         <item name="android:textSize">@dimen/link_title_text_size</item>
         <item name="android:textColor">@color/primary_text</item>
     </style>
@@ -89,7 +86,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/link_author_text_size</item>
         <item name="android:textColor">@color/secondary_text</item>
-        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="LinkSubredditTextView">
@@ -97,7 +93,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/link_subreddit_text_size</item>
         <item name="android:textColor">@color/secondary_text</item>
-        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="LinkTimestampTextView">
@@ -105,7 +100,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/link_timestamp_text_size</item>
         <item name="android:textColor">@color/secondary_text</item>
-        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="LinkDomainTextView">
@@ -114,6 +108,11 @@
         <item name="android:textSize">@dimen/link_domain_text_size</item>
         <item name="android:textColor">@color/secondary_text</item>
         <item name="android:textStyle">italic</item>
+    </style>
+
+    <style name="LinkCommentCountTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="LinkThumbnail">
