--- a/app/src/main/res/layout/comments_fragment_link_header.xml
+++ b/app/src/main/res/layout/comments_fragment_link_header.xml
@@ -3,62 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/link_score"
-            style="@style/LinkScoreTextView"
-            android:layout_marginRight="@dimen/link_score_margin"
-            android:gravity="center"
-            android:text="@string/link_score_default"/>
-
-        <TextView
-            android:id="@+id/link_title"
-            style="@style/LinkTitleTextView"/>
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp">
-
-        <TextView
-            android:id="@+id/link_author"
-            style="@style/LinkAuthorTextView"/>
-
-        <TextView
-            android:id="@+id/link_timestamp"
-            style="@style/LinkTimestampTextView"
-            android:layout_below="@id/link_author"/>
-
-        <TextView
-            android:id="@+id/link_domain"
-            style="@style/LinkDomainTextView"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"/>
-
-        <TextView
-            android:id="@+id/link_subreddit"
-            style="@style/LinkSubredditTextView"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/link_domain"/>
-
-    </RelativeLayout>
+    <include layout="@layout/reddit_link_item" />
 
     <TextView
         android:id="@+id/link_self_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/link_list_item_margin_horizontal"
+        android:layout_marginRight="@dimen/link_list_item_margin_horizontal"
         android:textColor="@color/primary_text"
         android:padding="@dimen/link_self_text_padding"
         android:background="@drawable/self_text_background"
