--- a/app/src/main/res/layout/reddit_link_item.xml
+++ b/app/src/main/res/layout/reddit_link_item.xml
@@ -12,29 +12,42 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="@dimen/link_list_item_margin_vertical"
-        android:paddingBottom="@dimen/link_list_item_margin_vertical"
-        android:paddingLeft="@dimen/link_list_item_margin_horizontal"
-        android:paddingRight="@dimen/link_list_item_margin_horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/link_title"
-            style="@style/LinkTitleTextView"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/link_list_item_margin_vertical"
+            android:layout_marginBottom="@dimen/link_list_item_margin_vertical"
+            android:layout_marginLeft="@dimen/link_list_item_margin_horizontal"
+            android:layout_marginRight="@dimen/link_list_item_margin_horizontal"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/link_domain"
-            style="@style/LinkDomainTextView"/>
+            <TextView
+                android:id="@+id/link_title"
+                style="@style/LinkTitleTextView"/>
+
+            <TextView
+                android:id="@+id/link_domain"
+                style="@style/LinkDomainTextView"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/link_list_item_margin_vertical"
+            android:paddingBottom="@dimen/link_list_item_margin_vertical"
+            android:paddingLeft="@dimen/link_list_item_margin_horizontal"
+            android:paddingRight="@dimen/link_list_item_margin_horizontal"
+            android:background="@color/primary_dark"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginRight="@dimen/link_data_margin"
                 android:orientation="vertical">
 
                 <RelativeLayout
