--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="link_title_text_size">20sp</dimen>
-    <dimen name="link_domain_text_size">16sp</dimen>
+    <dimen name="link_domain_text_size">14sp</dimen>
     <dimen name="link_score_text_size">14sp</dimen>
     <dimen name="link_author_text_size">14sp</dimen>
     <dimen name="link_timestamp_text_size">14sp</dimen>
@@ -15,7 +15,7 @@
     <dimen name="web_view_text_margin">5dp</dimen>
     <dimen name="comment_indentation_width">2dp</dimen>
     <dimen name="comment_indentation_margin">6dp</dimen>
-    <dimen name="comment_expander_size">14dp</dimen>
+    <dimen name="comment_expander_size">12dp</dimen>
     <dimen name="comment_author_text_size">16sp</dimen>
     <dimen name="comment_score_text_size">14sp</dimen>
     <dimen name="comment_timestamp_text_size">14sp</dimen>
@@ -38,5 +38,7 @@
     <dimen name="link_card_elevation">6dp</dimen>
     <dimen name="link_card_corner_radius">0dp</dimen>
     <dimen name="link_data_margin">5dp</dimen>
+    <dimen name="comment_data_divider_width">1dp</dimen>
+    <dimen name="comment_data_divider_margin">3dp</dimen>
 
 </resources>
