--- a/app/src/main/res/drawable/thumbnail_background.xml
+++ b/app/src/main/res/drawable/thumbnail_background.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/primary_light" />
+        android:color="@android:color/white" />
 
     <padding
         android:top="1dp"
