--- a/app/src/main/res/layout/reddit_link_item.xml
+++ b/app/src/main/res/layout/reddit_link_item.xml
@@ -13,6 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/link_card_background"
         android:orientation="vertical">
 
         <LinearLayout
